data/derived/comb/progs/unify/prog6441.ml.out
Characters 83-87:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
